# GENIAL

./: .dockerignore  .env.template  .gitattributes  .gitignore  .gitmodules  .secrets.template  Makefile  README.md  compress_output_folder.sh  delete_wrong_designs.sh  pyproject.toml  requirements.txt  requirements_extra.txt  ruff.toml  template.txt
.devcontainer/: devcontainer.json
.devcontainer/docker/: Dockerfile  build_dockers.sh  fix-uid-gid.sh  push_dockers.sh  run_docker.sh
.github/workflows_deactivated/: build-images.yml  ci.yml
docs/: analyzer.md  encoding_dicts.md  launcher.md  loop.md  recommender.md  scripts.md  setup.md  switching_activity.md  training.md
docs/developer/: contributing.md  debug.md  tests.md
model_configs/: 8b_default.yml  8b_pointnet_decoder.yml  8b_reducing_decoder.yml
scripts/: clean_docker.sh  cleanup_all_volumes.py  close_all_docker_containers.sh  compress_all_files.py  compress_and_delete.sh  delete_all_but_analytics_and_train.sh  liberty_to_capacitance.py  run_full_loop_max.sh  run_full_prototype_generation_loop.sh  run_full_prototype_generation_loop_b.sh  run_full_prototype_generation_loop_checkpoint_loop-ESPRESSO-naive.sh  run_full_prototype_generation_loop_checkpoint_loop-YOSYS-naive.sh  run_full_prototype_generation_loop_no_ssl_12k.sh  run_full_prototype_generation_loop_no_ssl_15k.sh  run_full_prototype_generation_loop_no_vae_12k.sh  run_full_prototype_generation_loop_no_vae_15k.sh  run_full_prototype_generation_loop_no_vae_20k.sh  run_full_prototype_generation_loop_sinkhorn.sh  run_full_prototype_generation_loop_w_vae_20k.sh  run_full_prototype_generation_loop_w_vae_20k_w_90_sampling.sh  run_full_prototype_generation_loop_w_vae_2k.sh  run_uniform_sampling_experiment.sh  swact_calibration.py  update_submodules.sh
scripts/custom_scripts/: ablation-prototype_gen_plots.py  analyzing_small_uniform.py  check_flowy_data_records.py  check_gnn_data_collection_run.py  circuit_clustering_and_subsampling.py  circuit_clustering_and_subsampling_polars.py  circuit_metadata_creation.py  create_initial_dir.slurm  design_subsampling_draft.py  extract_encodings.py  get_slurm_jobs.py  (+17 more)
tests/: conftest.py  test_analyzer.py  test_docker.py  test_flowy.py  test_launcher.py  test_loop.py  test_netlist_graph.py  test_power.py  test_recommender.py  test_scripts.py  test_setup_docs.py  test_swact_analysis.py  test_trainer.py
(+255 files in other folders)
